--- a/addons.html
+++ b/addons.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Addon Settings - 02Engine</title>
+    <title>Addon Settings - TurboWarp</title>
     <style>
       body[data-splash-theme="dark"] {
         background: #111;
